--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <header>
+    
     <h1>Donate blood, save lives-be someone's hero today!</h1>
     <nav>
       <ul>
@@ -21,14 +22,15 @@
       </ul>
     </nav>
   </header>
-
+  <div class="banner">
   <main class="main">
     <section id="home">
       <br>
-      <h1>WELCOME</h1>
+      <div class="banner-heading">
+      <h1>WELCOME</h1></div>
       <br>
       <div class="container">
-        <img src="https://wallpapercave.com/wp/wp4323467.jpg" alt="">
+       
         <div class="text">
 
           <p>Blood donation is a selfless act that can save lives and improve the health of individuals in need. By
@@ -36,7 +38,7 @@
             donation can help multiple people, making it a powerful way to give back to the community. Blood donation is
             safe, quick, and an opportunity to make a tangible difference. Regular donors play a crucial role in
             maintaining an adequate blood supply for hospitals and clinics. By choosing to donate, you become a hero to
-            those facing critical health challenges.</p>
+            those facing critical health challenges.</p></div>
         </div>
         <div>
         </div>
@@ -90,7 +92,8 @@
         </select>
         <br>
         <br>
-        <button>REGISTER</button>
+        <div class="button_modify">
+        <button>REGISTER</button></div>
       </form>
       <br>
       <br>
